--- a/ts-shell/package.json
+++ b/ts-shell/package.json
@@ -13,6 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superagent": "~8.1.2",
+    "jotai": "^2.4.3",
+    "jotai-game": "^0.1.0",
+    "@react-hook/resize-observer": "^1.2.5",
     "typescript": "^4.4.4",
     "vite": "^5.3.3"
   },
