--- a/ts-shell/package.json
+++ b/ts-shell/package.json
@@ -16,6 +16,7 @@
     "jotai": "^2.4.3",
     "jotai-game": "^0.1.0",
     "vite-plugin-wasm": "~3.3.0",
+    "use-animation-frame": "^0.1.4",
     "@react-hook/resize-observer": "^1.2.5",
     "typescript": "^4.4.4",
     "vite": "^5.3.3"
