--- a/ts-shell/tsconfig.json
+++ b/ts-shell/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es6",
+    "target": "ES2020",
     "lib": [
       "dom",
       "dom.iterable",
@@ -23,7 +23,7 @@
     "types": ["@webgpu/types"],
     "noImplicitReturns": false
   },
-  "include": ["src","lib"],
+  "include": ["src","lib","shaders.d.ts","global.d.ts"],
   "exclude": [
     "node_modules"
   ]
